ft - redesigned action bar replaced search view icon for widget redesigned theme attributes and button styles

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,10 @@ dependencies {
 
     //recycler view swipe decorator
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
+
+    //recycler view multi select library
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
+    implementation 'com.google.android.material:material:1.6.0-alpha01'
 }
