Fixed saving, retrieval and formatting of time for notes created and updated. Created dialog and some logic for deleting notes from trash. Fixed few UI attributes.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
 
     implementation 'com.google.android.material:material:1.6.0-alpha01'
+
+    //Pretty time library
+    implementation "org.ocpsoft.prettytime:prettytime:5.0.2.Final"
 }
